Bug 465417 - With default Klipper settings, copied image data from Spectacle is displayed as icon, rather than actual image
Summary: With default Klipper settings, copied image data from Spectacle is displayed ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2023-02-07 11:34 UTC by rik
Modified: 2024-08-30 17:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description rik 2023-02-07 11:34:17 UTC
+++ This bug was initially created as a clone of Bug #465120 +++

SUMMARY

After making a screenshot, Spectacle veryX conveniently gives me the option to annotate (or a range of other options in the menu) it in a temporary popup that disappears after a while (see screenshot). After this, my screenshot is still visible (kind of) in the Clipboard app in the form of a placeholder image. 

My feature enhancement request is that it would be visually nice (but also pragmatically useful in looking up the right screenshot) if the screenshot was actually visible there as a thumbnail instead of the place holder image. 

STEPS TO REPRODUCE
1. Install Kubunta 22.04 with KDE 5.25
2. Make a screenshot, this happens by default with Spectacle 
3. See the popup from Spectacle pop up in the bottom right with the Annotate + Menu (3 horizontal bars) options
4. Do not click on the popup, let it pass
5. After it has passed open Clipboard
6. Look at the copied screenshot in the Clipboard which is at the top of the list in the form of a placeholder image

OBSERVED RESULT
You see a placeholder image

EXPECTED RESULT
A thumbnail of the screenshot is shown in the Clipboard instead of a placeholder image

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 22.04
KDE Plasma Version: 5.25.5
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.3
Kernel Version: 5.15.0-58-generic (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-02-07 20:06:34 UTC
If you go into the Clipboard settings and change the value of "non-text selection" to "Always save in history" or "Only when explicitly copied" and then copy the screenshot from Spectacle again, does the Clipboard history popup show what you expect rather than an icon for the image?
Comment 2 rik 2023-02-08 10:39:54 UTC
(In reply to Nate Graham from comment #1)
> If you go into the Clipboard settings and change the value of "non-text
> selection" to "Always save in history" or "Only when explicitly copied" and
> then copy the screenshot from Spectacle again, does the Clipboard history
> popup show what you expect rather than an icon for the image?

Hi I just installed a new OS: here "Always save in history" is greyed out, I cannot select it. "Only when explicitly copied" is selected by default and indeed images are now shown in the Clipboard instead of a replacement icon! 
feature request can be closed.
Comment 3 Nate Graham 2023-03-03 17:19:19 UTC
To be clear: until this is fixed, it can be worked around by setting "Non-text selection:" to "Only when explicitly copied" in the clipboard settings window.
Comment 4 Bug Janitor Service 2024-08-29 18:29:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4659
Comment 5 Noah Davis 2024-08-30 17:41:44 UTC
Git commit d77e14249481c1839a57dd5f740d85f3df154557 by Noah Davis.
Committed on 30/08/2024 at 17:40.
Pushed by ndavis into branch 'master'.

klipper: always display image thumbnail when showing image delegate

Five years ago, we changed klipper to show an icon instead when force
copying images while non-text copying was disabled. This makes
it hard to identify the image though and the original reason for doing this
seems to be gone.

Original change for context: https://phabricator.kde.org/D22684, commit 423308f854c4b76c72da4e3263614c7b20642ebf
Related: bug 457098

M  +0    -4    klipper/historymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d77e14249481c1839a57dd5f740d85f3df154557