klipper: Always display images

Even when not saving images in history, show a thumbnail when
an image is in the clipboard instead of an icon.
BUG:465417